# 40-Day-Python

./: README.md
Python_40_Days/Day01/: Day1.py
Python_40_Days/Day03/: Day3.py
Python_40_Days/Day08/: Day8.py
Python_40_Days/Day09/: Day9.py
Python_40_Days/Day10/: Day10.py
Python_40_Days/Day11/: Day11.py
Python_40_Days/Day12/: Day12.py
Python_40_Days/Day13/: Day13.py
Python_40_Days/Day14/: Day14.ipynb
Python_40_Days/Day15/: Day15.py
Python_40_Days/Day16/: app.py  factorial.py
Python_40_Days/Day17/: Day17.ipynb
Python_40_Days/Day18/: Day18.ipynb
Python_40_Days/Day19/: Day19.ipynb
Python_40_Days/Day20/: Day20.ipynb
Python_40_Days/Day21/: Day21.ipynb
Python_40_Days/Day22/: Day22.ipynb
Python_40_Days/Day23/: Day23.ipynb
Python_40_Days/Day24+25/: Day2425.ipynb  Day2526.xlsx
Python_40_Days/Day26/: Day26.ipynb
Python_40_Days/Day27/: Day27.py  text.txt
Python_40_Days/Day28/: Day28.py
Python_40_Days/Day29/: Day29.ipynb
Python_40_Days/Day30/factorial-aivn-pika/: pyproject.toml
Python_40_Days/Day30/factorial-aivn-pika/factorial_aivn_pika/: app.py  factorial.py
Python_40_Days/Day30/factorial-aivn-pika/tests/: factorial_test.py
Python_40_Days/Day31/: Day31.ipynb
Python_40_Days/Day32+33/: Day3233.xlsx
Python_40_Days/Day34/: Day34.ipynb
Python_40_Days/Day35/: Day35.ipynb  database.sqlite
Python_40_Days/Day36/: Day36.ipynb  database.sqlite
Python_40_Days/Day37/: Day37.ipynb
Python_40_Days/Day38/: Day38.py
Python_40_Days/Day39/: Day39.ipynb  is_prime.py
Python_40_Days/Day4/: Day4.py
Python_40_Days/Day40/: Day40.ipynb
(+4 files in other folders)
