[tool.poetry]
name = "factorial-aivn-pika"
version = "0.1.0"
description = ""
authors = ["Quoc Toan Ly <lyquoctoan123456789@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
